# ComputerGraphicsFS22

./: .gitignore  README.md
cg_exercise_1/: CMakeLists.txt  glexample
cg_exercise_1/src/: Cube.frag  Cube.vert  GLExample.cpp  GLIncludes.h  Model.h
cg_exercise_2/: .clang-format  CMakeLists.txt  CMakeListsMSVC.txt  README.md  glexample
cg_exercise_2/src/: Cube.frag  Cube.h  Cube.vert  Cuboid.cpp  Cuboid.h  CuboidAndrin  CuboidBackup  GLApp.cpp  GLExample.cpp  GLExample.h  Shape.cpp  main.cpp
cg_exercise_3/: CMakeLists.txt  README.md
cg_exercise_3/shader/: Normals.frag  Normals.vert  Torus.frag  Torus.vert
cg_exercise_3/src/: GLExample.cpp  GLExample.h  MultiLine.cpp  MultiLine.h  ShaderProgram.cpp  ShaderProgram.h  Shape.cpp  Shape.h  Torus.cpp  Torus.h
cg_exercise_4/: CMakeLists.txt  README.md
cg_exercise_4/shader/: Cube.frag  Cube.vert  Torus.frag  Torus.vert
cg_exercise_4/src/: Camera.h  Cube.h  GLApp.cpp  GLApp.h  GLExample.cpp  GLExample.h  Shape.cpp  Shape.h
cg_exercise_5/: .editorconfig  CMakeLists.txt  README.md
cg_exercise_5/shader/: Cube.frag  Torus.frag  Torus.vert
cg_exercise_5/src/: Cube.cpp  GLExample.cpp  GLExample.h  MultiLine.cpp  Shape.h  Texture.cpp  Texture.h  Torus.cpp
cube_basic/: Reamde.txt  cube.cpp  inputModule.cpp  main.cpp  shader.cpp  shader.frag
cube_transformation/: inputModule.cpp  inputModule.h  shader.cpp  shader.vert
cube_transformation/Cube Transform/: cube.cpp  main.cpp
exercise_1/: CMakeLists.txt
exercise_1/src/: GLExample.cpp  GLExample.h  Model.cpp  main.cpp
exercise_2/: README.md
exercise_2/src/: Cube.cpp  Cuboid.cpp  GLApp.h
exercise_3/src/: GLExample.cpp  Shape.cpp  Shape.h  Torus.cpp
exercise_4/: README.md
exercise_4/shader/: Lightbox.vert  Normals.frag  Torus.frag
exercise_4/src/: Camera.cpp  Cube.cpp  Torus.cpp
exercise_5/: CMakeLists.txt  README.md
exercise_5/shader/: Cube.frag  Cube.vert
exercise_5/src/: Camera.cpp  Camera.h  GLApp.cpp  GLApp.h  GLExample.cpp  ShaderProgram.cpp  Shape.cpp  Torus.cpp  main.cpp
exercise_6/: CMakeLists.txt  README.md
exercise_6/shader/: Cube.frag  Cube.vert  Torus.frag  Torus.vert
exercise_6/src/: Cube.cpp  GLExample.cpp  GLExample.h  MultiLine.cpp  MultiLine.h  Shape.cpp  Shape.h  Texture.cpp  Torus.cpp
